2009-04-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_focus):
	Changes in focus drawing: rounded focus on listview header, better 
	unselected focus on treeview items, use dots on selected treeview items.

2009-03-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_focus):
	Better focus theming. Treeview focus is still not nice, because it is
	really difficult to theme (some themes uses black text, which should
	have a dark focus ring, while other themes a white one).

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* NEWS:
	* configure.ac:
	Updated NEWS file with a summary of the 0.90.2 release.
	Changed version to 0.90.2.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* src/murrine_rc_style.c (theme_parse_color),
	(murrine_rc_style_parse):
	Bumped Gtk+ version to 2.12.0.
	Use gtk_rc_parse_color_full (Gtk+ 2.12.0), which allows using
	symbolic colors for focus_color and scrollbar_color.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* NEWS:
	* src/murrine_style.c (murrine_style_draw_shadow),
	(murrine_style_draw_box), (murrine_style_draw_focus):
	Fixed a crash when using focus_color.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* NEWS:
	Updated NEWS file with a summary of the 0.90.1 release.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* NEWS:
	Updated NEWS file with a summary of the 0.90.0 release.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_focus):
	* src/support.c (murrine_gtk_treeview_get_header_index),
	(murrine_gtk_clist_get_header_index),
	(murrine_special_get_ancestor), (murrine_get_parent_window),
	(murrine_get_parent_bgcolor), (murrine_find_combo_box_widget),
	(murrine_is_combo_box):
	Fixed the focus on the gnome-panel.

2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (clearlooks_rounded_rectangle),
	(murrine_draw_lightborder):